[tool.poetry]
name = "hey_you"
version = "0.0.1"
description = "Hey you!"
authors = ["Josema <hello@josemazo.com>"]

[tool.poetry.dependencies]
python = "^3.7"
environs = "^4.1"
twilio = "^6.27"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
pytest = "^4.5"
pytest-cov = "^2.7"
pytest-sugar = "^0.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
